# testovoe-CAD_Exchanger

./: .gitignore  README.md
src/: CMakeLists.txt  main.cpp
src/curves/: CMakeLists.txt  Circle.cpp  Circle.h  CurveBase.h  Ellipse.cpp  Ellipse.h  Spiral.cpp  Spiral.h
